admin dashboard created

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 body {
-    background: #D8F2F0;
-    padding: 10px;
-    height: 100vh;
+  background: #d8f2f0;
+  padding: 10px;
 }
