--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,15 +30,15 @@ body {
 
 @keyframes shine {
   0% {
-      background-position: 0;
+    background-position: 0;
   }
 
   60% {
-      background-position: 180px;
+    background-position: 180px;
   }
 
   100% {
-      background-position: 180px;
+    background-position: 180px;
   }
 }
 
@@ -77,7 +77,7 @@ body {
   letter-spacing: 15px;
   text-transform: uppercase;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: rgba(255, 255, 255, 0.30);
+  -webkit-text-stroke-color: rgba(255, 255, 255, 0.3);
   font-family: var(--thm-font);
 }
 
@@ -94,7 +94,7 @@ body {
 }
 
 .handle-preloader {
-  background: linear-gradient(to right, #7eefe4, #9df5ef);;
+  background: linear-gradient(to right, #7eefe4, #9df5ef);
   /* background: linear-gradient(to right, #773cff, #135dd3);; */
   position: relative;
   /* top: 50%;
@@ -134,31 +134,33 @@ body {
   animation-delay: 1.3s;
 }
 
-.handle-preloader .animation-preloader .txt-loading .letters-loading:nth-child(8):before {
+.handle-preloader
+  .animation-preloader
+  .txt-loading
+  .letters-loading:nth-child(8):before {
   animation-delay: 1.5s;
 }
 
 @keyframes zoomInOut {
   0% {
-      -webkit-transform: rotate(0deg) scale(0.7);
-      transform: rotate(0deg) scale(0.7);
-      opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.7);
+    transform: rotate(0deg) scale(0.7);
+    opacity: 0;
   }
 
   50% {
-      -webkit-transform: rotate(360deg) scale(1);
-      transform: rotate(360deg) scale(1);
-      opacity: 1;
+    -webkit-transform: rotate(360deg) scale(1);
+    transform: rotate(360deg) scale(1);
+    opacity: 1;
   }
 
   100% {
-      -webkit-transform: rotate(360deg) scale(0.7);
-      transform: rotate(360deg) scale(0.7);
-      opacity: 0;
+    -webkit-transform: rotate(360deg) scale(0.7);
+    transform: rotate(360deg) scale(0.7);
+    opacity: 0;
   }
 }
 @keyframes letters-loading {
-
   0%,
   75%,
   100% {
